# rust-akash

./: .gitignore  CHANGELOG.md  COPYRIGHT.md  Cargo.toml  Dockerfile  LICENSE-MIT.md  Makefile  README.md  bacon.toml  release_notes.txt
.github/: pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-release.yml  ci.yml
docs/: build-release-guide.md
scripts/: release.sh
src/: cli.rs  config.rs  interactive.rs  main.rs  store.rs
src/shell/: mod.rs  unix.rs  windows.rs
