[package]
name = "akash"
version = "0.1.0"
edition = "2024"
description = "A simple cross-platform Rust project. CLI tool to manage shell aliases (aka + shell)."
keywords = ["cli", "aliases", "shell", "tool"]
categories = ["command-line-utilities", "productivity"]
repository = "https://github.com/helene-nguyen/rust-akash.git"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
colored = "3.1.1"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.38.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["json"] }

[[bin]]
name = "akash"
path = "src/main.rs"

[[bin]]
name = "aka"
path = "src/main.rs"
